tests/samples/invalid/missing_address.pn
fn foo(some_value: &u8) -> u8
{
	return: some_value
}

fn main() -> u8
{
	var ten: u8 = 10;
	var result = foo(ten);
	return: result
}
